# nexa

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  arithmetic.ll  arithmetic_test  cmake_install.cmake  matrix  matrix.ll  matrix.nx  matrix_test  matrix_tests  new  new.ll  output.ll  package-lock.json  run  scalar  scalar.ll  test.nx  vector  vector.ll
compiler/: main.cpp
compiler/ast/: Ast.h
compiler/codegen/: CodeGen.h  LLVMContext.h  codegen.cpp
compiler/codegen/matrix/: MatrixLowering.cpp  MatrixLowering.h
compiler/codegen/matrix/matmul/: MatMul.cpp  MatMul.h
compiler/codegen/opt/: Optimizer.cpp  Optimizer.h
compiler/ir/: CodeGen.cpp  CodeGen.h  LLVMContext.h
compiler/lexer/: .lexer.h.swp  Lexer.cpp  Lexer.h  Token.h
compiler/parser/: Parser.cpp  Parser.h
compiler/sema/: SemanticAnalyzer.cpp  SemanticAnalyzer.h  SymbolTable.h  Type.cpp  Type.h
runtime/ai/: Tensor.cpp  Tensor.h
runtime/file/: FileRuntime.cpp  FileRuntime.h
runx/: README.md  extension.js  package.json
test/: matrix.nx  referrences for research papers
tests/: CSV  CSV.nx  arithmetic.nx  file  file.nx  matrix  matrix.nx  model  model.nx  new  new.nx  output.txt  scalar  scalar.nx  struct_only  struct_only.nx  tempCodeRunnerFile.nx  tensor_ops  tensor_ops.nx  train_data.csv  vector  vector.nx
